Correct spacing

--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ a {
 main {
   display: grid;
   grid-area: main;
-  padding: 1em;
+  padding: 1em 1em 0 1em;
   margin: 0;
   border-bottom: .2rem solid #e2e2e2;
 }
@@ -174,7 +174,7 @@ main > ul > li > a {
 
 
 footer {
-  font-size: 1rem;
+  font-size: .75rem;
   padding: 1em;
   display: flex;
   justify-content: center;
